--- a/style.css
+++ b/style.css
@@ -13,3 +13,4 @@ hr {margin: 0%}
 .div-1 {position: absolute; top: 2%; right: 78%;}
 nav {background-color: black; color: white;  }
 a{color: white; background-color:black}
+@media only screen {max-width: 1350px}
